# go_bioenpro4to_channel_manager

./: Makefile  go.mod  main.go
lib/: c_channel_manager.h
lib/channel_manager/: Cargo.toml
lib/channel_manager/src/: lib.rs
lib/channel_manager/src/api/: channel_manager.rs  mod.rs  utils.rs
lib/go_channel_manager/: go.mod  go_channel_manager.go
